--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,11 @@
 RewriteEngine on
 
-RewriteCond %{REQUEST_FILENAME}
+RewriteCond %
+{REQUEST_FILENAME}
 
 !-d
 
-RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteCond %
+{REQUEST_FILENAME}\.html -f
 
-RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteRule^(.*)$ $1.html [NC,L]
