--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,5 @@
+
 RewriteEngine on
-
-RewriteCond %
-{REQUEST_FILENAME}
-
-!-d
-
-RewriteCond %
-{REQUEST_FILENAME}\.html -f
-
-RewriteRule^(.*)$ $1.html [NC,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html
+RewriteRule ^(.*)$ $1.html [NC,L]
